[package]
name = "gather-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive", "env"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["full"] }
fastrlp = { version = "0.1.2" }
thiserror = "1.0.33"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
anvil-core = { git = "https://github.com/foundry-rs/foundry" }
hex = "0.4.3"
